<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seek</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gpstest">GPSTest</string>
    <string name="title_activity_game_round">GameRound</string>
    <string name="player">player</string>
    <string name="name_of_game">Name of Game</string>
    <string name="random">Random</string>
    <string name="red">Red</string>
    <string name="start">Start</string>
    <string name="host_a_game">Host a Game</string>
    <string name="join_a_game">Join a Game</string>
    <string name="blue">Blue</string>
    <string name="spaghetti">Drop Bombs. Mom\'s Spaghetti</string>
    <string name="title_activity_paranormal">Paranormal Activity</string>
    <string name="team_red">Team Red</string>
    <string name="team_blue">Team Blue</string>
    <string name="lobby_activity">Lobby Activity</string>

</resources>
