<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.doggydigits.seek.ParanormalActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/playername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gamename"
        android:layout_below="@+id/gamename"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/player" />

    <EditText
        android:id="@+id/gamename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/join"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/name_of_game" >

        <requestFocus />
    </EditText>

    <ToggleButton
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start"
        android:layout_below="@+id/blue"
        android:text="@string/random"
        android:textOn="Random!" />

    <ToggleButton
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/random"
        android:layout_alignRight="@+id/host"
        android:layout_marginRight="14dp"
        android:text="@string/red"
        android:textOn="Red!" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/random"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />

    <ToggleButton
        android:id="@+id/host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/random"
        android:layout_marginRight="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/host_a_game"
        android:textOn="Host!" />

    <ToggleButton
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/host"
        android:layout_toRightOf="@+id/red"
        android:text="@string/join_a_game"
        android:textOn="Join!" />

    <ToggleButton
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playername"
        android:layout_marginTop="48dp"
        android:layout_toRightOf="@+id/red"
        android:text="@string/blue"
        android:textOn="Blue!" />

</RelativeLayout>