<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.doggydigits.seek.LobbyActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
    </ImageView>

    <ImageView
        android:id="@+id/teamRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red"
        android:text="@string/team_red"
        android:layout_toLeftOf="@+id/start"
        android:layout_toStartOf="@+id/start"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <ImageView
        android:id="@+id/teamBlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blu"
        android:text="@string/team_blue"
        android:layout_toRightOf="@+id/start"
        android:layout_toEndOf="@+id/start" />

    <ListView
        android:id="@+id/player_list_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamRed"
        android:layout_toLeftOf="@+id/start"
        android:layout_toStartOf="@+id/start"
        android:layout_alignRight="@+id/teamRed"
        android:layout_alignEnd="@+id/teamRed">

    </ListView>

    <ListView
        android:id="@+id/player_list_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/start"
        android:layout_toRightOf="@+id/start"
        android:layout_below="@+id/teamBlu">
    </ListView>

</RelativeLayout>